--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aomaker>=2.1.0; python_version >= "3.8"
+allure-pytest==2.18.1
+allure-python-commons==2.18.1
 faker==13.12.0
 python-jenkins==1.7.0
 tenacity==8.0.1
